# BaseOS

./: .gitignore  CMakeLists.txt  Console.cpp  Console.h  FileSystem.cpp  FileSystem.h  Login.cpp  Login.h  README.md  UEFIConsole.cpp  UEFIConsole.h  UefiCin.cpp  UefiCin.h  UefiConsole.cpp  UefiConsole.h  build-win.ps1  build.sh  main.cpp  makeimage.sh  run.sh
.github/workflows/: Build.yml  qodana_code_quality.yml
docs/: index.html  style.css
